force-app/main/default/objects/Event_DLQ__c/Event_DLQ__c.object-meta.xml
<CustomObject>
    <label>Event DLQ</label>
    <nameField>
        <displayFormat>DLQ-{000000}</displayFormat>
        <label>Event DLQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event DLQs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>