force-app/main/default/objects/Event_DLQ__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of the event that failed processing.</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>