force-app/main/default/objects/Event_DLQ__c/fields/Last_Retry_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Retry_On__c</fullName>
    <description
  >Timestamp of the most recent reprocessing attempt.</description>
    <label>Last Retry On</label>
    <type>DateTime</type>
</CustomField>