force-app/main/default/objects/Event_DLQ__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description
  >Serialized JSON payload of the event that failed processing.</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>